fix(core-css): expand tab visibility restriction list

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -31,10 +31,34 @@
 .md-tabs__item:has(a[href*="/CONTRIBUTING/"]) {
     display: none;
 }
+.md-tabs__item:has(a[href*="/includes/"]) {
+    display: none;
+}
+.md-tabs__item:has(a[href*="/javascripts/"]) {
+    display: none;
+}
 .md-tabs__item:has(a[href*="/josm/"]) {
     display: none;
 }
+.md-tabs__item:has(a[href*="/overrides/"]) {
+    display: none;
+}
 .md-tabs__item:has(a[href*="/rapid/"]) {
+    display: none;
+}
+.md-tabs__item:has(a[href*="/README/"]) {
+    display: none;
+}
+.md-tabs__item:has(a[href*="/resources/"]) {
+    display: none;
+}
+.md-tabs__item:has(a[href*="/stylesheets/"]) {
+    display: none;
+}
+.md-tabs__item:has(a[href*="/templates/"]) {
+    display: none;
+}
+.md-tabs__item:has(a[href*="/utilities/"]) {
     display: none;
 }
 
